[tool.poetry]
name = "ca-algorithms-hypothesis-visualizer"
version = "0.1.0"
description = "CA Algorithms Hypothesis Visualizer"
authors = ["grm <golosov_SA@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
